Tue Oct 23 12:28:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add "save all unsaved" menu item, fix the save
	  as dialog, and add confirmation on closing unsaved things.

Tue Oct 23 11:33:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/numerical.gel: remove IsGaussianInteger, we already
	  have IsGaussInteger alias IsComplexInteger

	* help/C/gel-function-list.xml: updates and fixes

Tue Oct 23 10:51:24 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: better logic for figuring out something is a
	  URI

Mon Oct 22 21:39:42 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: recognize uris on the command line
	  and handle them correctly

Mon Oct 22 19:38:03 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: whack the old gtk file selection stuff,
	  I'm tired of fixing bugs in two versions of code.  Consistently
	  have uri's around as program->name internally.  Fix opening
	  files without specifying full path on command line.

	* configure.in: require at least gtk+ 2.3.5

Tue Oct 16 11:05:32 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.desktop.in: hmmm, Calculator;Utility; also fits
	  the bill.  Makes the menu entry appear twice at least in ubuntu.
	  ... hmmm oh well.  The default menu setup in gnome must be a little
	  braindead and uses too simple queries.

	* help/C/genius.xml: added Accessories to list of possible submenus

Tue Oct 16 10:53:33 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.desktop.in: change Office to Education as per
	  the vfolder spec (that's still somewhat wrong, but unfortunately
	  it is as close to standard behaviour as we get).  Also notice
	  that the Scientific category was wrong.  "Science" is correct
	  as per spec.

	* help/C/genius.xml: update the manual for where to find the icon.

Sun Oct 14 10:10:11 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add Adrian E. Feiguin to the authors